@@ -1,17 +1,18 @@
 package fr.mattmunich.iceBoatRacing.race;
 
 import fr.mattmunich.iceBoatRacing.cars.Car;
-import fr.mattmunich.iceBoatRacing.livescoreboard.checkpoint.Checkpoint;
+import fr.mattmunich.iceBoatRacing.checkpoint.Checkpoint;
 import org.bukkit.Bukkit;
 import org.bukkit.World;
 import org.bukkit.command.CommandSender;
+import org.bukkit.configuration.file.YamlConfiguration;
 import org.bukkit.entity.Player;
 
 import javax.annotation.Nullable;
+import java.io.IOException;
 import java.util.*;
 
 import static fr.mattmunich.iceBoatRacing.Main.formatTime;
-import static fr.mattmunich.iceBoatRacing.Main.s;
 import static fr.mattmunich.iceBoatRacing.Messages.formatArguments;
 import static fr.mattmunich.iceBoatRacing.Messages.getMessage;
 
@@ -22,17 +23,19 @@ public class Race {
     public void setRaceManager(RaceManager raceManager) {
         this.raceManager = raceManager;
     }
-
+    YamlConfiguration config = null;
     final String name;
     final World world;
+    int lapCount = 10;
     final List<Checkpoint> checkpoints = new ArrayList<>();
     final List<Car> cars = new ArrayList<>();
     public final Map<UUID, RaceData> racers = new HashMap<>();
+
     /**
      * List of the racers who hae finished the race.
      * rankings.get(0) is first, rankings.get(1) is second and so on
      */
-    public final List<RaceData> rankings = new ArrayList<>();
+    public Map<Integer, RaceData> rankings = new HashMap<>();
 
     public long currentBestLapTime = Long.MAX_VALUE;
 
@@ -40,7 +43,7 @@ public class Race {
      * List of the racers that are actively racing
      * (-> those who have finished the race are not included)
      */
-    public final List<RaceData> racing = new ArrayList<>();
+    public List<RaceData> racing = new ArrayList<>();
 
     boolean startingRace = false;
     boolean preparingRace = false;
@@ -54,12 +57,34 @@ public class Race {
         this.world = world;
     }
 
+    public void setConfig(YamlConfiguration config) {
+        this.config = config;
+    }
+
+    public YamlConfiguration getConfig() {
+        return config;
+    }
+
+    public void saveConfig() throws IOException {
+        raceManager.saveRaceConfig(this, config);
+    }
+
     public void start() {
         raceManager.startRace(this);
     }
 
-    public void end() {
-        raceManager.endRace(this);
+    /**
+     * Ends the race
+     * @param sendRanking Whether the ranking message should be sent
+     * @throws Exception Only when {@code sendRanking} is true: rethrows {@link Race#sendRanking()}, race will still be ended properly
+     */
+    public void end(boolean sendRanking) throws Exception {
+        try {
+            if (sendRanking) sendRanking();
+        } finally {
+            raceManager.endRace(this);
+        }
+
     }
 
     public void togglePrepare(CommandSender sender) {
@@ -79,7 +104,14 @@ public class Race {
         else return -1;
     }
 
-    public void sendRanking() {
+    /**
+     * Sends the ranking message for the race
+     * @throws Exception Throws {@code NO_RACERS} when the race had no racers and {@code NO_RAKING} when there was no ranking for the race
+     */
+    public void sendRanking() throws Exception {
+        if (racers.isEmpty()) throw new Exception("NO_RACERS");
+        if (rankings.isEmpty()) throw new Exception("NO_RANKING");
+
         Bukkit.broadcast(getMessage("race.onEnd.top"));
 
         long bestLapTime = Long.MAX_VALUE;
@@ -92,29 +124,42 @@ public class Race {
         Map<Integer, Player> bestSectorPlayers = new HashMap<>();
 
         for (RaceData data : racers.values()) {
-            Bukkit.broadcast(getMessage("race.onEnd.playerFormat", formatArguments(
-                    "ranking", data.ranking + "",
-                    "player", data.player == null ? "OFFLINE" : data.player.getName(),
-                    "raceTime", formatTime(data.getRaceTime())
-            )));
+            if(rankings.get(0).equals(data)) {
+                Bukkit.broadcast(getMessage("race.onEnd.winnerFormat", formatArguments(
+                        "ranking", data.ranking + "",
+                        "player", data.player == null ? "OFFLINE" : data.player.getName(),
+                        "raceTime", formatTime(data.getRaceTime())
+                )));
+            } else {
+                Bukkit.broadcast(getMessage("race.onEnd.playerFormat", formatArguments(
+                        "ranking", data.ranking + "",
+                        "player", data.player == null ? "OFFLINE" : data.player.getName(),
+                        "raceTime", formatTime(data.getRaceTime()),
+                        "gapToNext", formatTime(data.gapToNextTime)
+                )));
+            }
 
-            for (long lapTime : data.getLapTimes()) {
-                if (lapTime < bestLapTime) {
-                    bestLapTime = lapTime;
-                    bestLapPlayer = data.player;
-                }
-                if (lapTime > worstLapTime) {
-                    worstLapTime = lapTime;
-                    worstLapPlayer = data.player;
+
+            if (!data.getLapTimes().isEmpty()) {
+                for (long lapTime : data.getLapTimes()) {
+                    if (lapTime < bestLapTime) {
+                        bestLapTime = lapTime;
+                        bestLapPlayer = data.player;
+                    }
+                    if (lapTime > worstLapTime) {
+                        worstLapTime = lapTime;
+                        worstLapPlayer = data.player;
+                    }
                 }
             }
 
-            Map<Integer, Long> sectorTimes = data.getSectorTimes();
+
+            Map<Integer, List<Long>> sectorTimes = data.getSectorsTimes();
             if (sectorTimes != null) {
                 for (int sectorID : sectorTimes.keySet()) {
                     bestSectorTimes.putIfAbsent(sectorID, Long.MAX_VALUE);
 
-                    long playerSectorTime = sectorTimes.get(sectorID);
+                    Long playerSectorTime = Collections.min(sectorTimes.get(sectorID));
 
                     if (playerSectorTime < bestSectorTimes.get(sectorID)) {
                         bestSectorTimes.put(sectorID, playerSectorTime);
@@ -124,8 +169,8 @@ public class Race {
             }
         }
 
-        long winnerTime = rankings.getFirst().getRaceTime();
-        long lastTime = rankings.getLast().getRaceTime();
+        long winnerTime = rankings.get(0).getRaceTime();
+        long lastTime = rankings.get(rankings.size()-1).getRaceTime();
         long winnerGap = lastTime - winnerTime;
 
         Bukkit.broadcast(getMessage("race.onEnd.highlights", formatArguments(
@@ -137,17 +182,19 @@ public class Race {
         )));
 
         // 4. Affichage des Secteurs
-        Bukkit.broadcast(getMessage("race.onEnd.bestSectorTimesTop"));
-        for (int sectorID : bestSectorTimes.keySet()) {
-            Player sectorRecordHolder = bestSectorPlayers.get(sectorID);
-            String playerName = (sectorRecordHolder == null) ? "§c§oUnknown" : sectorRecordHolder.getName();
-            long recordTime = bestSectorTimes.get(sectorID);
+        if (!bestSectorTimes.isEmpty()) {
+            Bukkit.broadcast(getMessage("race.onEnd.bestSectorTimesTop"));
+            for (int sectorID : bestSectorTimes.keySet()) {
+                Player sectorRecordHolder = bestSectorPlayers.get(sectorID);
+                String playerName = (sectorRecordHolder == null) ? "§c§oUnknown" : sectorRecordHolder.getName();
+                long recordTime = bestSectorTimes.get(sectorID);
 
-            Bukkit.broadcast(getMessage("race.onEnd.sectorFormat", formatArguments(
-                    "sectorID", String.valueOf(sectorID),
-                    "player", playerName,
-                    "time", recordTime == Long.MAX_VALUE ? "N/A" : formatTime(recordTime)
-            )));
+                Bukkit.broadcast(getMessage("race.onEnd.sectorFormat", formatArguments(
+                        "sectorID", String.valueOf(sectorID),
+                        "player", playerName,
+                        "time", recordTime == Long.MAX_VALUE ? "N/A" : formatTime(recordTime)
+                )));
+            }
         }
 
         Bukkit.broadcast(getMessage("race.onEnd.bottom"));
@@ -159,6 +206,13 @@ public class Race {
     }
     public World getWorld() {
         return world;
+    }
+    public int getLapCount() {
+        return lapCount;
+    }
+    public void setLapCount(int lapCount) {
+        this.lapCount = Math.max(lapCount, 1);
+        raceManager.updateRace(this);
     }
 
     //Checkpoints
@@ -210,7 +264,7 @@ public class Race {
         return preparingRace;
     }
 
-    public boolean hasNotStarted() {
-        return !hasRaceStarted;
+    public boolean hasStarted() {
+        return hasRaceStarted;
     }
 }
