@@ -2,24 +2,23 @@ package fr.mattmunich.iceBoatRacing.race;
 
 import fr.mattmunich.iceBoatRacing.Main;
 import fr.mattmunich.iceBoatRacing.Messages;
-import fr.mattmunich.iceBoatRacing.livescoreboard.checkpoint.Checkpoint;
-import net.kyori.adventure.text.serializer.legacy.LegacyComponentSerializer;
+import fr.mattmunich.iceBoatRacing.checkpoint.Checkpoint;
+import net.kyori.adventure.text.Component;
 import net.kyori.adventure.title.Title;
 import org.bukkit.Bukkit;
 import org.bukkit.GameMode;
+import org.bukkit.Location;
 import org.bukkit.entity.Boat;
 import org.bukkit.entity.Player;
 import org.bukkit.event.EventHandler;
 import org.bukkit.event.Listener;
 import org.bukkit.event.player.PlayerMoveEvent;
 
-import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 
-import static fr.mattmunich.iceBoatRacing.Main.c;
-import static fr.mattmunich.iceBoatRacing.Main.formatTime;
-import static fr.mattmunich.iceBoatRacing.Messages.formatArguments;
-import static fr.mattmunich.iceBoatRacing.Messages.getMessage;
+import static fr.mattmunich.iceBoatRacing.Main.*;
+import static fr.mattmunich.iceBoatRacing.Messages.*;
 
 public class RaceListener implements Listener {
 
@@ -37,7 +36,6 @@ public class RaceListener implements Listener {
 
         if (!player.isInsideVehicle()) return;
         if (!(player.getVehicle() instanceof Boat)) return;
-        if(!player.getGameMode().equals(GameMode.ADVENTURE)) return;
 
         RaceData data = null;
         for(Race race : raceManager.activeRaces) {
@@ -49,60 +47,156 @@ public class RaceListener implements Listener {
             return;
         }
 
-        Race race = data.race;
-
-        int nextCheckpointID = data.checkpointIndex+1;
-        Checkpoint nextCheckpoint = race.getCheckpoint(nextCheckpointID);
-
-        if (nextCheckpoint == null) {
-//            main.log("Checkpoint with ID " + nextCheckpointID + " is null, going back to 0");
-            data.checkpointIndex=0;
+        if(ENFORCE_RACING_GAMEMODE && !player.getGameMode().equals(RACING_GAMEMODE)) {
+            player.sendActionBar(Objects.requireNonNull(c("§cIllegal GameMode!")));
             return;
         }
 
-        //Actually check if the player is crossing the checkpoint
-        if (!nextCheckpoint.contains(player.getLocation())) return;
+        Race race = data.race;
 
-        // Start/finish checkpoint handling
-        long now = System.currentTimeMillis();
-        if (nextCheckpoint.getType().equals(Checkpoint.Type.START_FINISH)) {
+        //Test the whole movement segment (not just the current point) against checkpoints, and
+        //loop rather than checking only one per tick. Looping matters: if two checkpoints sit close
+        //together (e.g. a sector gate right next to an auto-generated checkpoint on a narrow bridge),
+        //a single tick's movement could cross both — checking only the first would silently strand
+        //the racer on the second one forever, since next tick they're already past it.
+        Location from = data.from == null ? event.getFrom() :  data.from;
+        Location to = event.getTo();
+        data.from = to;
 
-            //When starting the race/crossing the start line
-            if(data.lapCount==0) data.startTime=now;
+        while (true) {
+            int nextCheckpointID = data.checkpointIndex + 1;
+            Checkpoint nextCheckpoint = race.getCheckpoint(nextCheckpointID);
 
-            //When completing lap
-            if (data.lapCount>0 && !(data.lapCount == main.raceLapCount)) onCompleteLap(data, now);
+            if (nextCheckpoint == null) {
+                // Shouldn't happen
+                data.checkpointIndex = 0;
+                break;
+            }
 
-            //When finishing race
-            if(data.lapCount == main.raceLapCount) {
-                onCompleteLap(data, now);
-                onFinishRace(data, now);
+            if (!nextCheckpoint.crosses(from, to)) {
+                //Allow to skip 1 checkpoint if detection fails
+                int afterNextCheckpointID = data.checkpointIndex + 2;
+                Checkpoint afterNextCheckpoint = race.getCheckpoint(afterNextCheckpointID);
 
-                //End race automatically
-                if(race.racing.isEmpty()) {
-                    race.sendRanking();
-                    race.end();
+                if(afterNextCheckpoint == null || !afterNextCheckpoint.crosses(from, to)) break;
+                main.warn("Allowed " + player.getName() + " to skip checkpoint " + nextCheckpoint.getId() + " as they crossed checkpoint " + afterNextCheckpoint.getId()
+                        + "\nIf this happens often, please check your server performances and if the player has an unstable connection or some kind of cheats.");
+                long now = System.currentTimeMillis();
+
+                //process skipped checkpoint
+                if (nextCheckpoint.getType().equals(Checkpoint.Type.START_FINISH)) {
+                    crossStartFinish(data, now, race);
+                    break;
+                } else if (nextCheckpoint.getType().equals(Checkpoint.Type.SECTOR)) {
+                    crossSector(data, nextCheckpoint, now, player);
+                }
+
+                //process actually crossed checkpoint
+                if (afterNextCheckpoint.getType().equals(Checkpoint.Type.START_FINISH)) {
+                    crossStartFinish(data, now, race);
+                    break;
+                } else if (afterNextCheckpoint.getType().equals(Checkpoint.Type.SECTOR)) {
+                    crossSector(data, afterNextCheckpoint, now, player);
+                }
+
+                data.checkpointIndex+=2;
+                main.liveSidebar.getScore(player).setScore(((data.lapCount-1) * race.getCheckpoints().size()) + data.checkpointIndex);
+                break;
+            }
+
+            long now = System.currentTimeMillis();
+
+            if (nextCheckpoint.getType().equals(Checkpoint.Type.START_FINISH)) {
+                crossStartFinish(data, now, race);
+                break;
+            }
+
+            if (nextCheckpoint.getType().equals(Checkpoint.Type.SECTOR)) {
+                crossSector(data, nextCheckpoint, now, player);
+            }
+
+            data.checkpointIndex++;
+            main.liveSidebar.getScore(player).setScore(((data.lapCount-1) * race.getCheckpoints().size()) + data.checkpointIndex);
+        }
+    }
+
+    /// # Cross start finish
+    /// _The method that handles the event of a player crossing the start/finish line._
+    /// ---
+    /// The system resembles to how Mario Cart handles laps, but it is in no way a copy, this is code is
+    /// in no way the code Mario Cart and has been written by me (mattmunich).
+    ///
+    /// What I mean by that is: when you start your final lap, a title saying "3/3" (for example) will be sent,
+    /// indicating that you are starting the 3rd lap out of 3 (in this example), which is the final lap.
+    ///
+    /// #### 1. Handles when a player starts the race: they cross the start line for the first time
+    /// -> Lap count is set to 1 below.
+    ///
+    /// #### 2. Complete lap is handles by [onCompleteLap]
+    ///
+    /// #### 3. Handles when a player finishes the race
+    /// > -> run [onCompleteLap] <br/>
+    /// > -> run [onFinishRace] <br/>
+    /// > -> Check if there are no more racers <br/>
+    /// >   -> If so: send the ranking with [Race#sendRanking] and end the race using [Race#end]
+    ///
+    /// #### Finally:
+    /// - update {@code lapTime} to `now`
+    /// - update {@code lapCount} to += 1
+    /// - update {@code checkpointIndex} to 1 (so that we handle checkpoint 2 on next {@link PlayerMoveEvent})
+    /// - update the SideBar
+    ///
+    /// @param data The racer's data
+    /// @param now The current time in millis
+    /// @param race The race (like what else am I meant to say)
+    private void crossStartFinish(RaceData data, long now, Race race) {
+        //1. When starting the race = crossing the start line for the first time
+        // -> lapCount is set to 1 below
+        if(data.lapCount==0) data.startTime = now;
+
+        //2. Complete lap
+        if (data.lapCount>0 && !(data.lapCount == race.getLapCount())) onCompleteLap(data, now);
+
+        //3. Finish race
+        if(data.lapCount == race.getLapCount()) {
+            onCompleteLap(data, now);
+            onFinishRace(data, now);
+
+            //End race automatically
+            if(race.racing.isEmpty()) {
+                try {
+                    race.end(true);
+                } catch (Exception e) {
+                    switch (e.getMessage()) {
+                        case "NO_RANKING" -> Bukkit.getConsoleSender().sendMessage(Messages.getMessage("race.onEnd.error.noRanking"));
+                        case "NO_RACERS" -> Bukkit.getConsoleSender().sendMessage(Messages.getMessage("race.onEnd.error.noRacers"));
+                        default -> {
+                            Bukkit.getConsoleSender().sendMessage(Messages.getMessage("error.unknown"));
+                            main.err("Could not send ranking on race end", e);
+                        }
+                    }
                 }
             }
 
-            data.lapTime = now;
-            data.lapCount++;
             data.checkpointIndex = 0;
+            return;  //racer just finished; nothing more to process for them this tick
         }
 
-        if (nextCheckpoint.getType().equals(Checkpoint.Type.SECTOR)) {
-            data.sectorTimes.put(nextCheckpoint.getSectorID(), now-data.lapTime);
-            Bukkit.broadcast(getMessage("race.onCrossSector",
-                    formatArguments(
-                            "player", LegacyComponentSerializer.legacySection().serialize(player.displayName()),
-                            "ID", String.valueOf(nextCheckpoint.getSectorID()),
-                            "time", formatTime(now-data.lapTime)
-                    )
-            ));
-        }
+        data.lapTime = now;
+        data.lapCount++;
+        data.checkpointIndex = 1;
+        main.liveSidebar.getScore(data.player).setScore(((data.lapCount-1) * race.getCheckpoints().size()) + data.checkpointIndex);
+    }
 
-        data.checkpointIndex++;
-        main.liveSidebar.getScore(player).setScore(((data.lapCount-1) * race.getCheckpoints().size()) + data.checkpointIndex);
+    private static void crossSector(RaceData data, Checkpoint nextCheckpoint, long now, Player player) {
+        data.addSectorTime(nextCheckpoint.getSectorID(), now, data.lapTime);
+        Bukkit.broadcast(getMessage("race.onCrossSector",
+                formatArguments(
+                        "player", l(player.displayName()),
+                        "ID", String.valueOf(nextCheckpoint.getSectorID()),
+                        "time", formatTime(now - data.lapTime)
+                )
+        ));
     }
 
     private void onCompleteLap(RaceData data, long now) {
@@ -114,7 +208,7 @@ public class RaceListener implements Listener {
         if(bestLapTimeYet) {
             Bukkit.broadcast(getMessage("race.onCompleteLap.messageBestLapTimeYet",
                     formatArguments(
-                            "player", LegacyComponentSerializer.legacySection().serialize(player.displayName()),
+                            "player", l(player.displayName()),
                             "ID",  "" + data.lapCount,
                             "time", formatTime(lapDuration)
                     )
@@ -122,17 +216,17 @@ public class RaceListener implements Listener {
         } else {
             Bukkit.broadcast(getMessage("race.onCompleteLap.message",
                     formatArguments(
-                            "player", LegacyComponentSerializer.legacySection().serialize(player.displayName()),
+                            "player", l(player.displayName()),
                             "ID",  "" + data.lapCount,
                             "time", formatTime(lapDuration)
                     )
             ));
         }
         Title title = Title.title(
-            Messages.getMessage("race.onCompleteLap.title", formatArguments(
-                "currentLapCount", "" + data.lapCount,
-                "raceLapCount", "" + main.raceLapCount
-        )), Messages.getMessage("race.onCompleteLap.subtitle"));
+                getMessage("race.onCompleteLap.title", formatArguments(
+                        "currentLapCount", "" + data.lapCount,
+                        "raceLapCount", "" + data.race.getLapCount()
+                )), getMessage("race.onCompleteLap.subtitle"));
 
         player.showTitle(title);
     }
@@ -140,36 +234,53 @@ public class RaceListener implements Listener {
     private static void onFinishRace(RaceData data, long now) {
         Player player = data.player;
         Race race = data.race;
-        List<RaceData> finished = race.rankings;
+        Map<Integer, RaceData> finished = race.rankings;
         race.racing.remove(data);
         data.endTime= now;
-        race.rankings.add(data);
+        race.rankings.put(finished.size(), data);
 
         int ranking = finished.size();
         data.ranking = ranking; //Used for the final ranking later on
         boolean isWinner = ranking==1;
 
         long raceTime = now - data.startTime;
-        long gapToWinner = isWinner ? -1 : finished.getFirst().getRaceTime();
+        long gapToWinner = isWinner ? -1 : (raceTime - finished.get(0).getRaceTime());
         //get(ranking-1) = self ; get(ranking-2) = player #(ranking-1) ; because ranking = size (starts @ 1) and get(x) starts @ 0
-        long gapToNext = isWinner ? -1 : finished.get(ranking-2).getRaceTime();
+        long gapToNext = isWinner ? -1 : (raceTime - finished.get(ranking-2).getRaceTime());
+        data.gapToNextTime = gapToNext;
+
+        Map<Integer,Long> bestSectorsTimes = data.bestSectorsTimes();
 
         int players = race.racers.size();
 
         Bukkit.broadcast(getMessage("race.onFinish.message",
                 formatArguments(
-                        "player", LegacyComponentSerializer.legacySection().serialize(player.displayName()),
                         "time", formatTime(raceTime),
                         "ranking", ranking + ""
-                )
+                ),
+                formatComponentArguments("player", player.displayName())
         ));
 
         Title title = Title.title(
-                Messages.getMessage("race.onFinish.title"),
-                Messages.getMessage("race.onFinish.subtitle", formatArguments("ranking", ranking + ""))
+                getMessage("race.onFinish.title"),
+                getMessage("race.onFinish.subtitle", formatArguments("ranking", ranking + ""))
         );
 
         player.showTitle(title);
+
+        Component bestSectorsTimesMessage = c("§cNo data");
+        if (!bestSectorsTimes.isEmpty()) {
+            bestSectorsTimesMessage = c("");
+            for (Map.Entry<Integer, Long> entry : bestSectorsTimes.entrySet()) {
+                if (entry.getKey() == null || entry.getValue() == null) continue;
+                bestSectorsTimesMessage = bestSectorsTimesMessage.append(getMessage("race.onFinish.sectorFormat",formatArguments(
+                    "sectorID", "" + entry.getKey(),
+                        "time", formatTime(entry.getValue())
+                )));
+            }
+            if (bestSectorsTimesMessage.equals(c(""))) bestSectorsTimesMessage = c("§cNo data");
+        }
+
 
         if(isWinner) {
             player.sendMessage(getMessage("race.onFinish.statsMessageWinner",
@@ -180,6 +291,9 @@ public class RaceListener implements Listener {
                             "meanLapTime", formatTime(data.meanLapTime()),
                             "bestLapTime", formatTime(data.bestLapTime()),
                             "worstLapTime", formatTime(data.worstLapTime())
+                    ),
+                    formatComponentArguments(
+                            "bestSectorsTimes", bestSectorsTimesMessage
                     )
             ));
         } else {
@@ -193,13 +307,19 @@ public class RaceListener implements Listener {
                             "worstLapTime", formatTime(data.worstLapTime()),
                             "gapToWinner", formatTime(gapToWinner),
                             "gapToNext", formatTime(gapToNext)
-
+                    ),
+                    formatComponentArguments(
+                            "bestSectorsTimes", bestSectorsTimesMessage
                     )
             ));
         }
 
-        //TODO make optional via config
-        player.setGameMode(GameMode.SPECTATOR);
-        try { data.car.destroy(); } catch (Exception ignored) {}
+        if (SPECTATE_ON_FINISH) {
+            player.setGameMode(GameMode.SPECTATOR);
+            boolean success = data.car.destroy();
+            if (!success && player.getVehicle() != null) player.getVehicle().remove();
+        } else {
+            race.racing.remove(data);
+        }
     }
 }
